<resources>
    <string name="app_name">AREA</string>
    <string name="button_login">Login</string>
    <string name="LOGO">Logo</string>
    <string name="sentence_no_account">No account yet? Create one</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="button_create">Create account</string>
    <string name="sentence_already_account">Already a member? Login</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="password">Password</string>
</resources>
